hld: Add githash

--- a/package.yaml
+++ b/package.yaml
@@ -57,6 +57,7 @@ executables:
     dependencies:
       - melf
       - optparse-applicative >= 0.16.1 && < 0.17
+      - githash
       # - binary
       # - bytestring
       # - prettyprinter
