--- a/package.yaml
+++ b/package.yaml
@@ -58,6 +58,5 @@ executables:
       - melf
       - optparse-applicative >= 0.16.1 && < 0.17
       - githash
-      # - binary
-      # - bytestring
-      # - prettyprinter
+      - bytestring
+      - hasm
