Dont use githash

--- a/package.yaml
+++ b/package.yaml
@@ -59,6 +59,6 @@ executables:
     dependencies:
       - melf
       - optparse-applicative >= 0.16.1 && < 0.17
-      - githash
       - bytestring
       - hasm
+      # - githash
