--- a/hasm.cabal
+++ b/hasm.cabal
@@ -62,9 +62,10 @@ executable hld
     , hasm
     , melf
     , optparse-applicative >=0.16.1 && <0.17
+    , unix
   default-language: Haskell2010
 
-test-suite exceptions
+test-suite test
   type: exitcode-stdio-1.0
   main-is: Tests.hs
   other-modules:
@@ -84,5 +85,4 @@ test-suite exceptions
     , tasty
     , tasty-golden
     , tasty-hunit
-    , unix
   default-language: Haskell2010
