--- a/hasm.cabal
+++ b/hasm.cabal
@@ -37,7 +37,8 @@ library
       src
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-redundant-constraints
   build-depends:
-      base >=4.6 && <5.0
+      array
+    , base >=4.6 && <5.0
     , bytestring
     , exception-context-th
     , exceptions
