--- a/package.yaml
+++ b/package.yaml
@@ -20,6 +20,7 @@ github: aleksey-makarov/hasm
 
 library:
   dependencies:
+    - array
     - bytestring
     - exception-context-th
     - exceptions
