--- a/hasm.cabal
+++ b/hasm.cabal
@@ -29,9 +29,11 @@ source-repository head
 
 library
   exposed-modules:
-      Asm.AsmAArch64
+      Asm.Asm
+      Asm.AArch64
       Asm.DummyLd
   other-modules:
+      Asm.Data
       Paths_hasm
   hs-source-dirs:
       src
@@ -68,10 +70,10 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Tests.hs
   other-modules:
-      Code.DontRun
-      Code.ForwardLabel
-      Code.HelloWorld
-      Code.TestBss
+      Code.AArch64.DontRun
+      Code.AArch64.ForwardLabel
+      Code.AArch64.HelloWorld
+      Code.AArch64.TestBss
       Paths_hasm
   hs-source-dirs:
       tests
