--- a/package.yaml
+++ b/package.yaml
@@ -30,7 +30,8 @@ library:
     - template-haskell >= 2.16 && < 2.17
   source-dirs: src
   exposed-modules:
-    - Asm.AsmAArch64
+    - Asm.Asm
+    - Asm.AArch64
     - Asm.DummyLd
 
 tests:
