Rework relocations, prepare for .bss

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,8 +4,11 @@ CC = $(PREFIX)gcc
 LDFLAGS = -nostdlib
 
 TEST_BSS = test_bss.S test_bss.o test_bss.o.dis test_bss.o.dump test_bss.gcc test_bss.gcc.dis test_bss.gcc.dump
+TEST_LOCAL_TXT = test_local_txt.o test_local_txt.o.dump test_local_txt.o.dis test_local_txt.gcc
 
-all : $(TEST_BSS)
+ALL = $(TEST_BSS) $(TEST_LOCAL_TXT)
+
+all : $(ALL)
 
 # test_bss.o : CFLAGS += -O3
 test_bss.gcc : LDFLAGS =
@@ -33,4 +36,4 @@ test_bss.gcc : LDFLAGS =
 	pandoc --standalone -o $@ $<
 
 clean:
-	rm -rf *.html *.dump *.layout *.dis *.dummy *.gcc *.o *.S
+	rm -rf *.html $(ALL)
