[no ci] Test for .bss: QuickCheck based test

--- a/package.yaml
+++ b/package.yaml
@@ -46,9 +46,11 @@ tests:
       - melf
       - mtl
       - process
+      - QuickCheck
       - tasty
       - tasty-golden
       - tasty-hunit
+      - tasty-quickcheck
       - unix
 
 executables:
