--- a/hasm.cabal
+++ b/hasm.cabal
@@ -80,7 +80,8 @@ test-suite test
       tests
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-redundant-constraints
   build-depends:
-      base >=4.6 && <5.0
+      QuickCheck
+    , base >=4.6 && <5.0
     , bytestring
     , exceptions
     , filepath
@@ -91,5 +92,6 @@ test-suite test
     , tasty
     , tasty-golden
     , tasty-hunit
+    , tasty-quickcheck
     , unix
   default-language: Haskell2010
