Build static executables

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,7 +1,7 @@
-PREFIX = aarch64-unknown-linux-gnu-
+PREFIX = aarch64-unknown-linux-musl-
 CFLAGS = -Wall -Wextra -pedantic
 CC = $(PREFIX)gcc
-LDFLAGS = -nostdlib
+LDFLAGS = -nostdlib -static
 
 TEST_BSS = test_bss.S test_bss.o test_bss.o.dis test_bss.o.dump test_bss.gcc test_bss.gcc.dis test_bss.gcc.dump
 TEST_LOCAL_TXT = test_local_txt.o test_local_txt.o.dump test_local_txt.o.dis test_local_txt.gcc
@@ -10,8 +10,7 @@ ALL = $(TEST_BSS) $(TEST_LOCAL_TXT)
 
 all : $(ALL)
 
-# test_bss.o : CFLAGS += -O3
-test_bss.gcc : LDFLAGS =
+test_bss.gcc : LDFLAGS = -static
 
 %.S : %.c
 	$(CC) $(CFLAGS) -S $< -o $@
