ld: Rename a few things

--- a/hasm.cabal
+++ b/hasm.cabal
@@ -32,7 +32,7 @@ library
       Asm.Asm
       Asm.AArch64
       Asm.Data
-      Asm.DummyLd
+      Asm.Ld
   other-modules:
       Asm.Relocation
   hs-source-dirs:
