--- a/hasm.cabal
+++ b/hasm.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 
--- This file has been generated from package.yaml by hpack version 0.34.5.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -18,7 +18,7 @@ license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
 tested-with:
-    GHC == 8.10.7
+    GHC == 9.2.4
 extra-doc-files:
     ChangeLog.md
     README.md
@@ -40,7 +40,7 @@ library
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-redundant-constraints
   build-depends:
       array
-    , base >=4.6 && <5.0
+    , base
     , bytestring
     , exception-context-th
     , exceptions
@@ -48,7 +48,8 @@ library
     , melf
     , mtl
     , singletons
-    , template-haskell ==2.16.*
+    , singletons-th
+    , template-haskell
   default-language: Haskell2010
 
 executable hld
@@ -59,11 +60,11 @@ executable hld
       app
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-redundant-constraints -fno-warn-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.6 && <5.0
+      base
     , bytestring
     , hasm
     , melf
-    , optparse-applicative >=0.16.1 && <0.17
+    , optparse-applicative
     , unix
   default-language: Haskell2010
 
@@ -81,7 +82,7 @@ test-suite test
   ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wno-redundant-constraints
   build-depends:
       QuickCheck
-    , base >=4.6 && <5.0
+    , base
     , bytestring
     , exceptions
     , filepath
