--- a/hasm.cabal
+++ b/hasm.cabal
@@ -32,7 +32,7 @@ library
       Asm.Asm
       Asm.AArch64
       Asm.Data
-      Asm.Ld
+      Asm.LdDummy
   other-modules:
       Asm.Relocation
   hs-source-dirs:
@@ -52,8 +52,8 @@ library
     , template-haskell
   default-language: Haskell2010
 
-executable hld
-  main-is: hld.hs
+executable hlddummy
+  main-is: hlddummy.hs
   other-modules:
       Paths_hasm
   hs-source-dirs:
