--- a/hasm.cabal
+++ b/hasm.cabal
@@ -66,6 +66,7 @@ executable hld
     , hasm
     , melf
     , optparse-applicative
+    , singletons
     , unix
   default-language: Haskell2010
 
