--- a/package.yaml
+++ b/package.yaml
@@ -59,13 +59,12 @@ tests:
       - unix
 
 executables:
-  hld:
-    main: hld.hs
+  hlddummy:
+    main: hlddummy.hs
     source-dirs: app
     ghc-options: -fno-warn-unused-do-bind -threaded -rtsopts -with-rtsopts=-N
     dependencies:
       - bytestring
-      - exceptions
       - hasm
       - melf
       - optparse-applicative
